# polisplexity-digital-social-twin

./: .dockerignore  .gitignore  docker-compose.yml  readme.md
coral-agents/groq-agent/: Dockerfile  main.py
coral-agents/interface-agent/: .env_sample  README.md  main.py  pyproject.toml
coral-agents/ollama-agent/: Dockerfile  main.py
coral-agents/voice-interface/: .env.example  .gitignore.old  Dockerfile  README.md  main.py  pyproject.toml
coral-agents/voice-interface/.github/workflows/: docker-image.yml
coral-agents/voice-interface/utils/: sse.py
coral-server/: gradle.properties
coral-server/src/main/resources/: application.yaml
coral-studio/.svelte-kit/: ambient.d.ts
coral-studio/.svelte-kit/adapter-node/: index.js  manifest.js
coral-studio/.svelte-kit/adapter-node/chunks/: app-sidebar.js  breadcrumb-page.js  events.js  hooks.server.js  index.js  internal.js
coral-studio/.svelte-kit/adapter-node/entries/pages/: _layout.svelte.js  _page.svelte.js
coral-studio/.svelte-kit/adapter-node/nodes/: 4.js  5.js  6.js
coral-studio/.svelte-kit/output/client/.vite/: manifest.json
coral-studio/.svelte-kit/output/client/_app/: version.json
coral-studio/.svelte-kit/output/server/: manifest.js
coral-studio/.svelte-kit/output/server/.vite/: manifest.json
coral-studio/.svelte-kit/output/server/chunks/: IconCraneRegular.js  card-header.js  exports.js  logs.svelte.js  threads.js
coral-studio/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  7.js
coral-studio/.svelte-kit/types/: route_meta_data.json
(+37 files in other folders)
